# Software_engineering_project_life_of_boids_simulation

./: .gitignore  .gitlab-ci.yml  README.md
src/: CMakeCache.txt  CMakeLists.txt  main.cpp
src/Agents/: Agent.cpp  Agent.hpp
src/Utils/: Display.h  constants.hpp  game.h
src/kd_tree/: kdTree.cpp  kdTree.h
src/laws/: laws.cpp  laws.hpp
src/position/: 2DVec.hpp
tests/: CMakeLists.txt  agents_test.cpp  laws_test.cpp
